--- a/blur.css
+++ b/blur.css
@@ -37,6 +37,12 @@ body {
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);
+    -webkit-transition: all 0.6s ease-out; 
+     -moz-transition: all 0.6s ease-out; 
+      -ms-transition: all 0.6s ease-out; 
+       -o-transition: all 0.6s ease-out; 
+          transition: all 0.6s ease-out;
+          opacity: 0.5;
 }
 
 .nonBlur {
@@ -45,4 +51,5 @@ body {
   -o-filter: blur(0px);
   -ms-filter: blur(0px);
   filter: blur(0px);
+  opacity: 1.0;
 }
